[package]
name = "ServerAgent"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
env_logger = "0.11.8"
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"
tokio = { version = "1.0", features = ["full"] }
bytes = "1.0"
futures = "0.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.29"
network-interface = "1.0"
chrono = "0.4"
dotenv = "0.15"
tonic-tls = "0.4"

[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12"
rustls = "0.21"
rustls-pemfile = "1.0"