[package]
name = "ServerAgent"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
env_logger = "0.11.8"
tonic = { version = "0.11", features = ["tls"] }
prost = "0.12"
prost-types = "0.12"
tokio = { version = "1.0", features = ["full"] }
bytes = "1.0"
futures = "0.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.29"
network-interface = "2.0.1"
chrono = "0.4"
dotenv = "0.15"
tonic-tls = "0.4"
log = "0.4.27"
rustls-pemfile = "1.0"
rustls = "0.21"
mpsc = "0.2.6"
tokio-rustls = "0.26.2"
tokio-stream = "0.1.17"

[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12"
rustls = "0.21"
rustls-pemfile = "1.0"
